--- a/ZilLion.Core.TaskManager/ZilLion.Core.DatabaseWrapper/packages.config
+++ b/ZilLion.Core.TaskManager/ZilLion.Core.DatabaseWrapper/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.12" targetFramework="net45" />
+  <package id="DapperExtensions" version="1.4.4" targetFramework="net45" />
   <package id="MongoDB_BSon_AND_Driver" version="1.0.0" targetFramework="net40" />
-  <package id="Z.ExtensionMethods" version="2.0.10" targetFramework="net40" requireReinstallation="True" />
 </packages>
