--- a/ZilLion.Core.TaskManager/ZilLion.Core.TaskManager/ZilLion.Core.TaskManager.csproj
+++ b/ZilLion.Core.TaskManager/ZilLion.Core.TaskManager/ZilLion.Core.TaskManager.csproj
@@ -38,6 +38,14 @@
       <HintPath>..\packages\Common.Logging.Core.3.3.1\lib\net40\Common.Logging.Core.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Dapper, Version=1.12.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.12\lib\net40\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="DapperExtensions, Version=1.4.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\DapperExtensions.1.4.4\lib\net40\DapperExtensions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Quartz, Version=2.4.1.0, Culture=neutral, PublicKeyToken=f6b8c98a402cc8a4, processorArchitecture=MSIL">
       <HintPath>..\packages\Quartz.2.4.1\lib\net40\Quartz.dll</HintPath>
       <Private>True</Private>
@@ -51,23 +59,35 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Z.ExtensionMethods, Version=2.0.10.0, Culture=neutral, PublicKeyToken=59b66d028979105b, processorArchitecture=MSIL">
+      <HintPath>..\packages\Z.ExtensionMethods.2.0.10\lib\net45\Z.ExtensionMethods.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\Jobconfig.cs" />
     <Compile Include="Config\TaskManagerConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respository\jobConfigRespository.cs" />
+    <Compile Include="Respository\SourceContext.cs" />
     <Compile Include="TaskRunner.cs" />
-    <Compile Include="Unities\SqlHelper.cs" />
-    <Compile Include="Unities\File\FileHelper.cs" />
     <Compile Include="Unities\Quartz\CustomTriggerListener.cs" />
     <Compile Include="Unities\Quartz\QuartzHelper.cs" />
     <Compile Include="Unities\Quartz\TaskUtil.cs" />
+    <Compile Include="Unities\File\FileHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ZilLion.Core.DatabaseWrapper\ZilLion.Core.DatabaseWrapper.csproj">
+      <Project>{ae052494-c7ad-425e-98d4-bad57fe3c042}</Project>
+      <Name>ZilLion.Core.DatabaseWrapper</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
