--- a/ZilLion.Core.TaskManager/ZilLion.Core.TaskManager/packages.config
+++ b/ZilLion.Core.TaskManager/ZilLion.Core.TaskManager/packages.config
@@ -2,5 +2,8 @@
 <packages>
   <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
+  <package id="Dapper" version="1.12" targetFramework="net452" />
+  <package id="DapperExtensions" version="1.4.4" targetFramework="net452" />
   <package id="Quartz" version="2.4.1" targetFramework="net452" />
+  <package id="Z.ExtensionMethods" version="2.0.10" targetFramework="net452" />
 </packages>
