--- a/ZilLion.Core.TaskManager/ZilLion.Core.TaskManager/ZilLion.Core.TaskManager.csproj
+++ b/ZilLion.Core.TaskManager/ZilLion.Core.TaskManager/ZilLion.Core.TaskManager.csproj
@@ -70,10 +70,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respository\jobConfigRespository.cs" />
     <Compile Include="Respository\SourceContext.cs" />
+    <Compile Include="Respository\TaskRunLogRespository.cs" />
     <Compile Include="TaskRunner.cs" />
     <Compile Include="Unities\Quartz\CustomTriggerListener.cs" />
     <Compile Include="Unities\Quartz\QuartzHelper.cs" />
-    <Compile Include="Unities\Quartz\TaskUtil.cs" />
+    <Compile Include="Unities\Quartz\TaskRunLog.cs" />
+    <Compile Include="Unities\Quartz\TaskHelper.cs" />
     <Compile Include="Unities\File\FileHelper.cs" />
   </ItemGroup>
   <ItemGroup>
